# competitive-programming

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  generate_contest.sh  main.cpp  test.cpp
.devcontainer/: devcontainer.json
.github/workflows/: generate-docs.yaml
ACM ICPC/ACPC Kickoff/ACPC Kickoff 2024/: B.cpp  D.cpp  F.cpp  H.cpp  K.cpp
ACM ICPC/ACPC/ACPC 2018/: I.cpp
ACM ICPC/ACPC/ACPC Training Contest 1/: C.cpp  G.cpp
ACM ICPC/ACPC/ACPC Training Contest 2/: C.cpp  D.cpp
ACM ICPC/ICPC 2018 Amman/: F.cpp
ACM ICPC/TCPC/TCPC 2021/: A.cpp  I.cpp  K.cpp
ACPC/ACPC 2018/: C.cpp  L.cpp
ACPC/ACPC Training Contest 3/: A.cpp  B.cpp
AtCoder/AtCoder Regular Contest 136/: A.cpp
CSES/: Dice_combinations.cpp  Grid_Paths.cpp  Minimizing_Coins.cpp  Removing_Digits.cpp
CSES/Dynamic Programming/: Coin_Combinations_1.cpp
CSES/Introductory Problems/: Increasing Array.cpp  Missing Number.cpp  Weird Algorithm.cpp
CSES/Range Queries/: Dynamic Range Minimum Queries.cpp  Hotel Queries.cpp  Range Update Queries.cpp
CSES/Sorting and Searching/: Apartments.cpp  Collecting Numbers.cpp  Concert Tickets.cpp  Maximum Subarray Sum.cpp  Missing Coin Sum.cpp  Movie Festival.cpp  Playlist.cpp  Restaurant Customers.cpp  Stick Lengths.cpp  Sum of Two Values.cpp
CSES/String Algorithms/: Finding Borders.cpp
Codeforces/CPH/: B.cpp  C.cpp  D.cpp
Codeforces/CodeTON Round 8 (Div. 1 + Div. 2, Rated, Prizes!)/: A.cpp  B.cpp
Codeforces/Codeforces Global Round 19/: C.cpp
Codeforces/Codeforces Global Round 25/: B.cpp  C.cpp
Codeforces/Codeforces Round #758 (Div. 1 + Div. 2)/: B.cpp
Codeforces/Codeforces Round #759 (Div. 2)/: A.cpp  B.cpp
Codeforces/Codeforces Round #767 (Div. 2)/: A.cpp  B.cpp
Codeforces/Codeforces Round #769 (Div. 2)/: A.cpp
Codeforces/Codeforces Round #770 (Div. 2)/: A.cpp  D.cpp
Codeforces/Codeforces Round #772 (Div. 2)/: A.cpp  B.cpp  C.cpp  D.cpp
Codeforces/Codeforces Round 241 (Div. 2)/: Booking_System.cpp
Codeforces/Codeforces Round 246 (Div. 2)/: D - Prefixes and Suffixes.cpp
Codeforces/Codeforces Round 248 (Div. 2)/: B - Kuriyama Mirai's Stones.cpp
Codeforces/Codeforces Round 269 (Div. 2)/: D -MUH and Cube Walls.cpp
Codeforces/Codeforces Round 271 (Div. 2)/: Captain_Marmot.cpp
Codeforces/Codeforces Round 320 (Div. 1) [Bayan Thanks-Round]/: C.cpp
Codeforces/Codeforces Round 770 (Div. 2)/: C.cpp
Codeforces/Codeforces Round 772 (Div. 2)/: B.cpp
Codeforces/Codeforces Round 781 (Div. 2)/: A.cpp  B.cpp
Codeforces/Codeforces Round 782 (Div. 2)/: A.cpp
Codeforces/Codeforces Round 927 (Div. 3)/: A.cpp
Codeforces/Codeforces Round 935 (Div. 3)/: B.cpp
Codeforces/Codeforces Round 936 (Div. 2)/: B.cpp
Codeforces/Codeforces Round 937 (Div. 4)/: A - Stair, Peak, or Neither?.cpp  B - Upscaling.cpp  C - Clock Conversion.cpp  D - Product of Binary Decimals.cpp  E - Nearly Shortest Repeating Substring.cpp  F - 0, 1, 2, Tree!.cpp
Codeforces/Codeforces Round 938 (Div. 3)/: A - Yogurt Sale.cpp  B - Progressive Square.cpp  C - Inhabitant of the Deep Sea.cpp  D - Inaccurate Subsequence Search.cpp  F - Unfair Game.cpp
Codeforces/Codeforces Round 960 (Div. 2)/: A.cpp  C.cpp
Codeforces/Codeforces Round 962 (Div. 3)/: A.cpp  B.cpp
Codeforces/Codeforces Round 964 (Div. 4)/: A.cpp  B.cpp  D.cpp  E.cpp  G2.cpp
Codeforces/Codeforces Round 971 (Div. 4)/: C.cpp  D.cpp
Codeforces/Educational Codeforces Round 120 (Div. 2)/: A.cpp  B.cpp
Codeforces/Educational Codeforces Round 122 (Div. 2)/: A.cpp  C.cpp  D.cpp
Codeforces/Educational Codeforces Round 167 (Rated for Div. 2)/: A.cpp  C.cpp
Codeforces/Hello 2022/: B.cpp  C.cpp  CMakeLists.txt
France-IOI/: Baliser_le_labyrinthe.cpp  Bloquer_une_route.cpp  Carton_trop_plein.cpp  Colorier_des_zones_avec_un_maximum_de_couleurs.cpp  Fermetrue_du_labyrinthe.cpp  Festival_de_musique.cpp  Panneaux_encouragement.cpp  Sequences_operations.cpp
France-IOI/Niveau 3/Exercices d'entraînement du niveau 3/: Amis d’amis.cpp  Carrés concentriques.c  Extension du centre.c  Galerie souterraine.cpp  Rallonges audio.c  Tri automatique.c
France-IOI/Niveau 4/Algorithmes semi-numériques (1)/: Addition de grands nombres.c  Collage.c  Multiplications multiples.c  Nombres quasi-parfaits.cpp
France-IOI/Niveau 4/Arbres/: Carton commun.c  Fibre optique - brute force.cpp  Fibre optique.cpp  Longueur des descriptions.c  Retrouver un produit.cpp
France-IOI/Niveau 4/Calculs géométriques (1)/: Pistes d'atterrissage.cpp  Repérage des lieux.c
France-IOI/Niveau 4/Débloquage du niveau 4/: Baguenaudier.c
France-IOI/Niveau 4/Graphes implicites (1)/: Arbres malades.c  Grille de couleurs.cpp  Plus grand rayon laser.cpp  (+1 more)
France-ioi/: Affectation_des_Salles.cpp  Augmenter_la_frequentation.cpp  Bloquer_une_route.cpp  Chemin_le_plus_court.cpp  Fermeture_annuelle.cpp  Nombreux_Produits.cpp
ICPC 2018 Amman/: E.cpp  G.cpp  H.cpp
IEEEXtreme 15/: Bus_Company.cpp  Doctor.cpp  Language_Learning.cpp  Similarity.cpp
IEEEXtreme/IEEEXtreme 15/: Teams.cpp
TCPC/TCPC 2021/: CMakeLists.txt  E.cpp  F.cpp  G.cpp  H.cpp  L.cpp
Winter Cup 4/: A.cpp  C.cpp  F.cpp  G.cpp  I.cpp  J.cpp  M.cpp  testA.cpp  testB.cpp
Winter Cup/Winter Cup 4/: D.cpp  K.cpp  L.cpp
scripts/CSES/: README.template.md  generate.py
scripts/France-IOI/: README.template.md  generate.py
solutions/CSES/: README.md
solutions/France-IOI/: README.md
solutions/IEEEXtreme 15/: Bus_Company.cpp  Doctor.cpp  Spies.cpp
stress-tester/: brute.cpp  mapper.sh  optimal.cpp  testcase.cpp  testcase.py
(+468 files in other folders)
